Prepares for final release of 3.1  - Added KoFi button  - Added Material Text Field  - UI improvements  - Added FAB for support
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -48,7 +48,17 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>
-          <Button
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Donate"
+            android:onClick="donate"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:textColor="@color/colorBackground"
+            android:background="@drawable/button"/>
+        <Button
             android:id="@+id/disclaimer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
