--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,4 +29,17 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
         />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="10dp"
+        app:srcCompat="@drawable/rupee"
+        android:focusable="true"
+        tools:ignore="UnusedAttribute" />
 </RelativeLayout>
