--- a/app/src/main/res/menu/activity_launching_drawer.xml
+++ b/app/src/main/res/menu/activity_launching_drawer.xml
@@ -17,6 +17,11 @@
             android:title="Downloads"
             android:checkable="false"/>
         <item
+            android:id="@+id/nav_donate"
+            android:icon="@drawable/ic_dollar"
+            android:title="Support"
+            android:checkable="false"/>
+        <item
             android:title="Settings"
             android:id="@+id/settings"
             android:icon="@drawable/settings"
