Adds file sharing via FTP
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/menu/activity_launching_drawer.xml
+++ b/app/src/main/res/menu/activity_launching_drawer.xml
@@ -44,7 +44,7 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share this app"/>
+                android:title="Tell a friend"/>
 
         </menu>
     </item>
