--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="dark_blue">#158CBA</color>
     <color name="black">#a1887f</color>
     <color name="purple">#7b1fa2</color>
+    <color name="Salmon">#FA8072</color>
+    <color name="LightSalmon">#FFA07A</color>
 </resources>
