--- a/app/src/main/res/layout/activity_downloads.xml
+++ b/app/src/main/res/layout/activity_downloads.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorBackground"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_above="@id/banner_container"
         android:layout_height="match_parent"
@@ -29,4 +30,17 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
         />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/ftp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@id/banner_container"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="10dp"
+        app:srcCompat="@drawable/shared_folder"
+        android:focusable="true"
+        tools:ignore="UnusedAttribute" />
 </RelativeLayout>
