--- a/app/src/main/res/menu/downloads_menu.xml
+++ b/app/src/main/res/menu/downloads_menu.xml
@@ -3,6 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/ftp"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_folder_shared"
+        app:showAsAction="ifRoom"
+        android:title="FTP"
+        tools:ignore="HardcodedText" />
+    <item
         android:id="@+id/trash"
         android:orderInCategory="100"
         android:icon="@drawable/ic_trash"
