UX improvements in timetable
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -13,13 +13,12 @@
         />
     <ListView
         android:id="@+id/list"
-        android:divider="@android:color/white"
         android:longClickable="true"
         android:layout_above="@id/banner_container"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:dividerHeight="0dp"/>
+        android:divider="@android:color/white"/>
 
     <!-- Empty view is only visible when the list has no items. -->
     <TextView
