Adds feedback form and updates shuttle bus timings
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/menu/activity_launching_drawer.xml
+++ b/app/src/main/res/menu/activity_launching_drawer.xml
@@ -22,6 +22,11 @@
             android:title="Support"
             android:checkable="false"/>
         <item
+            android:id="@+id/nav_feedback"
+            android:icon="@drawable/ic_feedback"
+            android:title="Feedback"
+            android:checkable="false"/>
+        <item
             android:title="Settings"
             android:id="@+id/settings"
             android:icon="@drawable/settings"
