--- a/app/src/main/res/layout/word_list.xml
+++ b/app/src/main/res/layout/word_list.xml
@@ -50,12 +50,16 @@
             android:textAppearance="?android:textAppearanceMedium"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/banner_container"
+   <com.google.android.gms.ads.AdView
+  xmlns:ads="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/banner_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        />
+  ads:adSize="SMART_BANNER"
+ads:adUnitId="@string/adUnitId"
+  >
+</com.google.android.gms.ads.AdView>
 </RelativeLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
