--- a/app/src/main/res/layout/activity_grades.xml
+++ b/app/src/main/res/layout/activity_grades.xml
@@ -17,13 +17,17 @@
         android:textStyle="bold"
         android:visibility="visible" />
 
-    <LinearLayout
-        android:id="@+id/banner_container"
+   <com.google.android.gms.ads.AdView
+  xmlns:ads="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/banner_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        />
+  ads:adSize="SMART_BANNER"
+ads:adUnitId="@string/adUnitId"
+  >
+</com.google.android.gms.ads.AdView>
     <LinearLayout
         android:layout_width="match_parent"
         android:id="@+id/progressBar"
