--- a/app/src/main/res/layout/activity_marks.xml
+++ b/app/src/main/res/layout/activity_marks.xml
@@ -45,11 +45,15 @@
         android:layout_height="wrap_content"
         tools:context=".aums.activities.AttendanceActivity">
     </android.support.v7.widget.RecyclerView>
-    <LinearLayout
-        android:id="@+id/banner_container"
+   <com.google.android.gms.ads.AdView
+  xmlns:ads="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/banner_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        />
+  ads:adSize="SMART_BANNER"
+ads:adUnitId="@string/adUnitId"
+  >
+</com.google.android.gms.ads.AdView>
 </RelativeLayout>
