--- a/app/src/main/res/layout/activity_shuttle_bus_timings.xml
+++ b/app/src/main/res/layout/activity_shuttle_bus_timings.xml
@@ -12,11 +12,15 @@
         android:id="@+id/timings_list"
         android:layout_height="match_parent"
         tools:context=".timings.TimingsActivity"/>
-    <LinearLayout
-        android:id="@+id/banner_container"
+   <com.google.android.gms.ads.AdView
+  xmlns:ads="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/banner_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        />
+  ads:adSize="SMART_BANNER"
+ads:adUnitId="@string/adUnitId"
+  >
+</com.google.android.gms.ads.AdView>
 </RelativeLayout>
