--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,11 +22,15 @@
             android:divider="@android:color/white"
             android:layout_above="@id/banner_container"
             android:layout_height="wrap_content"/>
-    <LinearLayout
-        android:id="@+id/banner_container"
+   <com.google.android.gms.ads.AdView
+  xmlns:ads="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/banner_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        />
+  ads:adSize="SMART_BANNER"
+ads:adUnitId="@string/adUnitId"
+  >
+</com.google.android.gms.ads.AdView>
 </RelativeLayout>
