--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,18 +18,34 @@
     <ListView
         android:id="@+id/items_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/banner_container"
+        android:layout_height="match_parent"
+        android:layout_above="@id/support"
         android:divider="@android:color/white"
         android:dividerHeight="0dp"
         android:numColumns="1" />
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/banner_container"
+    <LinearLayout
+        android:id="@+id/support"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/adUnitId"></com.google.android.gms.ads.AdView>
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:onClick="openSupport"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/donate"
+            android:textColor="@color/colorPrimaryDark"
+            tools:ignore="HardcodedText" />
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/ic_chevron_right_black_24dp" />
+    </LinearLayout>
+
 </RelativeLayout>
