--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -24,12 +24,12 @@
                 android:id="@+id/image"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
+                android:onClick="openWebsite"
                 android:src="@drawable/raj"
                 android:visibility="visible"
                 app:siBorderColor="@android:color/white"
                 app:siBorderWidth="3dp"
                 app:siRadius="6dp"
-                android:onClick="openWebsite"
                 app:siSquare="false" />
 
             <TextView
@@ -74,6 +74,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="5dp" />
+
                 <ImageView
                     android:id="@+id/site"
                     android:layout_width="50dp"
@@ -86,16 +87,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:textColor="@color/red"
-                android:text="rajkumaar.co.in"
                 android:onClick="openWebsite"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
+                android:text="rajkumaar.co.in"
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+                android:textColor="@color/red" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="45dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="45dp"
                 android:orientation="horizontal">
 
@@ -135,12 +136,4 @@
         </LinearLayout>
     </ScrollView>
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/banner_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/adUnitId" />
 </RelativeLayout>
