--- a/app/src/main/res/layout/activity_study_materials.xml
+++ b/app/src/main/res/layout/activity_study_materials.xml
@@ -10,8 +10,7 @@
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/banner_container" />
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/banner_container"
