--- a/app/src/main/res/layout/paper_item.xml
+++ b/app/src/main/res/layout/paper_item.xml
@@ -20,10 +20,10 @@
 
         <LinearLayout
             android:id="@+id/imageHolder"
-            android:gravity="center"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/image"
