--- a/app/src/main/res/menu/activity_launching_drawer.xml
+++ b/app/src/main/res/menu/activity_launching_drawer.xml
@@ -40,6 +40,10 @@
                 android:icon="@drawable/ic_info_black_24dp"
                 android:title="About" />
             <item
+                android:id="@+id/nav_bugreport"
+                android:icon="@drawable/ic_bug"
+                android:title="Report a bug" />
+            <item
                 android:id="@+id/nav_review"
                 android:icon="@drawable/ic_stars_black_24dp"
                 android:title="Leave a review" />
